Some minor Changes in Attendence Page

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
             </div>
         </nav>
-        <div class="d-flex justify-content-evenly align-content-center flex-wrap">
+        <div class="d-flex justify-content-evenly align-content-center flex-wrap mt-md-4">
             <div class="d-flex justify-content-center align-content-center mt-lg-auto mb-auto">
                 <h1 class="text-light w-75 fw-bolder fs-1">BETTER ATTENDANCE FOR EDUCATOR</h1>
             </div>
