--- a/attendencePage/index.html
+++ b/attendencePage/index.html
@@ -4,44 +4,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Attendance Page</title>
+    <title>Admin Page</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" ,b
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
-    <div class="container-fluid">
-        <h1 class="d-flex text-light fw-bolder justify-content-center align-content-center mt-4 fs-1 " id="h-color">
-            Welcome To Attendance Page
-        </h1>
-        
-    
-        <div class="d-flex justify-content-center align-items-center" id="parentDiv">
-            <div id="mainContainer">
-                <div class="d-flex justify-content-center align-items-center">
-                    <input type="text" id="Name" placeholder="Enter Your Name">
-                </div>
-                <div class="d-flex justify-content-center align-items-center">
-                    <input type="number" id="rollNumber" placeholder="Enter Your Roll Number">
-                </div>
-                <div class="d-flex justify-content-center align-content-center align-items-center">
-                    <button id="markBtn" onclick="markBtn()">Mark</button>
-                </div>
-                <div class="d-flex justify-content-center align-content-center align-items-center mt-2">
-                    <button id="downloadExcel" onclick="downloadExcel()">View Excel</button>
+    <div class="container-xxl">
+        <nav class="navbar navbar-expand-lg bg-transparent  shadow ">
+            <div class="container-fluid">
+                <a class="navbar-brand text-light fw-bolder" href="#">Rs Attendance</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse " id="navbarNav">
+                    <ul class="navbar-nav ms-auto ">
+                        <li class="nav-item ">
+                            <a class="nav-link active text-light fw-bolder" aria-current="page" href="../index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light fw-bolder" href="attendance.html">Attendance</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light fw-bolder" href="#">Classes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light fw-bolder" href="../index.html" target="_blank">Log Out</a>
+                        </li>
+
+                    </ul>
                 </div>
             </div>
+        </nav>
+        <div class="d-flex justify-content-evenly align-content-center mt-lg-5 flex-wrap ">
+            <div class="boxes d-flex justify-content-center align-items-center" id="Attendance" ">
+                <h2><a href=" attendance.html" class="text-decoration-none text-dark">Mark Attendence</a></h2>
+
+            </div>
+            <div class="boxes d-flex justify-content-center align-content-center align-items-center "
+                onclick="totalAttendance()">
+
+                <h2  ><a href="./viewAttendence/index.html" class="text-decoration-none text-dark" >View Attendence</a></h2>
+            </div>
+            <div class="boxes d-flex justify-content-center align-content-center align-items-center"
+                onclick="PresentAttendance()">
+                <h2> <a href="./presentStudent/index.html" class="text-decoration-none text-dark" >Present Students</a></h2>
+            </div>
+            <div class="boxes d-flex justify-content-center align-content-center align-items-center"
+                onclick="absentAttendance()">
+                <h2><a href="./absentStudent/index.html"class="text-decoration-none text-dark">Absent Student</a></h2>
+            </div>
         </div>
+
+        <!--Container Div Ended Here!-->
     </div>
 
 
 
+    <!--Body Section Ended-->
+    <!--Js Links-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
     <script src="app.js"></script>
 </body>
 
